# saltext-kubernetes

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: deploy-package-action.yml  docs-action.yml  pr.yml  tag.yml  test-action.yml  test.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
changelog/: +changed.breaking.md  +config.removed.md  +configmap.breaking.md  +context.breaking.md  +dynamic-client.changed.md  +ingress-hpa-pdb.added.md  +job-cronjob.added.md  +k8s-deprecation.deprecated.md  +kind-registry.changed.md  +kuberesource-companions.added.md  +kubernetes-apply.added.md  +node-ops.added.md  +pod-ops.added.md  +pv-pvc-apply-only.added.md  +rbac.added.md  +requests-toolbelt.added.md  +resource-plugin.added.md  +rich-auth.added.md  +workload-cluster-ops.added.md  1.changed.md  1.updated.md  10.added.md  16.added.feature.md  16.changed.md  16.fixed.md  2.feature.md  23.added.feature.md  25.added.feature.md  25.fixed.helper.md  27.added.feature.md  30.added.feature.md
docs/: all.rst  conf.py  index.rst
docs/ref/modules/: all.rst  index.rst  saltext.kubernetes.modules.k8s.rst  saltext.kubernetes.modules.kubeadm.rst  saltext.kubernetes.modules.kuberesource_cmd.rst  saltext.kubernetes.modules.kuberesource_cp.rst  saltext.kubernetes.modules.kuberesource_logs.rst  saltext.kubernetes.modules.kuberesource_node.rst  saltext.kubernetes.modules.kuberesource_state.rst  saltext.kubernetes.modules.kuberesource_workload.rst  saltext.kubernetes.modules.kubernetes_mod.rst  saltext.kubernetes.modules.kubernetesmod.rst  saltext.kubernetes.modules.rst
docs/ref/resource/: index.rst  saltext.kubernetes.resource.kubernetes.rst
docs/ref/resources/: index.rst  saltext.kubernetes.resources.kubernetes.rst
docs/topics/: apply-only-kinds.md  auth.md  installation.md
requirements/: docs.in  tests.in
requirements/py3.10/: docs.txt  lint.txt  tests.txt
requirements/py3.8/: docs.txt  lint.txt  tests.txt
requirements/py3.9/: docs.txt  lint.txt  tests.txt
tests/: conftest.py
tests/functional/: conftest.py
tests/integration/: conftest.py
(+92 files in other folders)
